k8s/bencloud-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bencloud-app
  namespace: benmap-dev
  annotations:
    app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
    app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bencloud-app

  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: bencloud-app
      annotations:
        app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
        app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
    spec:
      securityContext:
        runAsUser: 555
        runAsGroup: 555
        fsGroup: 555
      containers:
      - name: api
        image:  registry.epa.gov/benmap/bencloudapp/bencloudapp:$CI_COMMIT_SHORT_SHA
        imagePullPolicy: Always
        livenessProbe:
         tcpSocket:
            port: 80
         initialDelaySeconds: 10
         periodSeconds: 15
        startupProbe:
          tcpSocket:
            port: 80
          failureThreshold: 30
          periodSeconds: 10
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: glcr-auth
