k8s/bencloud-stage-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bencloud-app
  namespace: benmap-stg
  annotations:
    app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
    app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: bencloud-app

  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: bencloud-app
      annotations:
        app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
        app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
    spec:
      containers:
      - name: ui
        image:  registry.epa.gov/benmap/bencloudapp/bencloudapp/app-defender:$CI_COMMIT_TAG
        imagePullPolicy: Always
        livenessProbe:
         tcpSocket:
            port: 80
         initialDelaySeconds: 10
         periodSeconds: 15
        startupProbe:
          tcpSocket:
            port: 80
          failureThreshold: 30
          periodSeconds: 10
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: glcr-auth

---

apiVersion: v1
kind: Service
metadata:
  name: bencloud-app-service
  namespace: benmap-stg
  annotations:
    app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
    app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
spec:
  ports:
  - port: 443
    targetPort: 80
  selector:
    app: bencloud-app

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bencloudapp-ingress
  namespace: benmap-stg
  annotations:
    app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
    app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - stg.bencloud-stage.aws.epa.gov
      secretName: bencloud-tls-secret
  rules:
    - host: stg.bencloud-stage.aws.epa.gov
      http:
        paths:
        - path: /geoserver
          pathType: Prefix
          backend:
           service:
            name: bencloud-geoserver-service
            port: 
             number: 443
        - path: /
          pathType: Prefix
          backend:
           service:
            name: bencloud-app-service
            port: 
             number: 443
